<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_QualityCompress"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="100"
        android:maxLength="3"
        app:layout_constraintStart_toEndOf="@+id/textView_Argument_3"
        app:layout_constraintTop_toBottomOf="@+id/editText_Argument_2" />

    <TextView
        android:id="@+id/textView_Argument_3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/textView_quality"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Argument_2" />

    <Button
        android:id="@+id/button_ImageSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="316dp"
        android:text="@string/button_ImageSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Argument_2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/textView_Argument_2"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Argument_1" />

    <TextView
        android:id="@+id/textView_Argument_1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/textView_Argument_1"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ServerIP" />

    <TextView
        android:id="@+id/textView_ServerIP"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="textViewClicked"
        android:text="@string/textView_ServerIP"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Argument_2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_Argument_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_Argument_1" />

    <EditText
        android:id="@+id/editText_Argument_1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_Argument_1"
        app:layout_constraintTop_toBottomOf="@+id/editText_ServerIP" />

    <EditText
        android:id="@+id/editText_ServerIP"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:digits="0123456789."
        android:ems="10"
        android:text="192.168.43.132"
        android:maxLength="15"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView_ServerIP"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="Nu este selectata nici o imagine..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ImageSelect" />

    <Button
        android:id="@+id/button_Transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_Transfer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>